# firecontrol-rs

./: Cargo.toml  memory.x  openocd.cfg  openocd.gdb
fsm-rs/src/: error.rs
fsm-rs/src/fsm/: events.rs  machine.rs  machine_context.rs  states.rs  transitions.rs
src/: fsm.rs  main.rs  peripherals.rs  print.rs  queue.rs
